Slide 2: Add gimbal lock information

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -520,10 +520,10 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     
     \begin{itemize}
         \item Pérdida de un grado de libertad cuando dos de los tres ejes de giro se colocan en paralelo.
-        \item Existe un eje sobre el que no se puede girar. En la práctica, por ejemplo, puede hacer que un brazo robótica no pueda realizar cierto giro. Solución: \emph{wrist flip}
+        \item Existe un eje sobre el que no se puede girar. En la práctica, por ejemplo, puede hacer que un brazo robótica no pueda realizar cierto giro. Solución: \emph{wrist flip}.
     \end{itemize}
     
-    En el caso de los ángulos de Euler, lo que sucede es que dos de los tres ángulos describen un mismo giro. El Gimbal Lock ocurre específicamente en los ángulos de Euler cuando los giros se aplican en un orden particular, generalmente cuando el ángulo de Pitch se acerca a 90 grados.
+    \note{En el caso de los ángulos de Euler, lo que sucede es que dos de los tres ángulos describen un mismo giro. El Gimbal Lock ocurre específicamente en los ángulos de Euler cuando los giros se aplican en un orden particular, generalmente cuando el ángulo de Pitch se acerca a 90 grados.}
     
     Tool Online para mostrar Gimbal Lock: \url{https://danceswithcode.net/engineeringnotes/rotations_in_3d/demo3D/rotations_in_3d_tool.html}
     
@@ -536,9 +536,9 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     
     \note{Problema del Apollo 11 con Gimbal Lock: https://history.nasa.gov/alsj/gimbals.html}
 
-    \TODO{https://youtu.be/Mm8tzzfy1Uw}
-    \TODO{https://youtu.be/oaq4Z4rbKkA}
-    \TODO{Gimbal-Lock Video explanation: https://youtu.be/-WXfEPg8eMM}
+    \note{https://youtu.be/Mm8tzzfy1Uw}
+    \note{https://youtu.be/oaq4Z4rbKkA}
+    \note{Gimbal-Lock Video explanation: https://youtu.be/-WXfEPg8eMM}
 \end{frame}
 
 \begin{frame}
