Slide 2: Add euler information

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -455,7 +455,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     \frametitle{Ángulos de Tait-Bryann}
     \small
     \begin{block}{Ángulos de Tait-Bryann}
-        Combinaciones de giros con Ángulos de Tait-Bryann (o ángulos de navegación): $xyz$ $xzy$, $yxz$, $yzx$, $zxy$ y $zyx$. Los ángulos Tait-Bryann se usan normalmente para definir la orientación de aeronaves, satélites o embarcaciones. Los ángulos Tait-Bryann se aplican utilizando un sistema de coordenadas fijo (Rotaciones extrínsecas).
+        Son un tipo de Ángulos de Euler, donde los tres ejes de rotación son distintos entre sí. Combinaciones de giros con Ángulos de Tait-Bryann (o ángulos de navegación): $xyz$ $xzy$, $yxz$, $yzx$, $zxy$ y $zyx$. Los ángulos Tait-Bryann se usan normalmente para definir la orientación de aeronaves, satélites o embarcaciones. Los ángulos Tait-Bryann se aplican utilizando un sistema de coordenadas fijo (Rotaciones extrínsecas).
     \end{block}
     
     \begin{block}{Ángulos de Roll-Pitch-Yaw}
