Slide 3: minor changes

--- a/teoricas/teorica_03/src/sensors.tex
+++ b/teoricas/teorica_03/src/sensors.tex
@@ -1,16 +1,19 @@
 \begin{frame}
     \frametitle{Tipos de sensores}
     \footnotesize
+    
+    Propioceptivos vs exteroceptivos:
+    
     \begin{itemize}
-    \item sensores propioceptivos miden valores internos del sistema (robot), por ejemplo, velocidad del motor, carga de la rueda, ángulos de articulación del brazo del robot y voltaje de la batería.
-
-    \item sensores exteroceptivos adquieren información del entorno del robot, por ejemplo, medidas de distancia, intensidad de la luz y amplitud del sonido. Por lo tanto, el robot interpreta las mediciones de los sensores exteroceptivos para extraer características ambientales significativas.
+        \item Sensores propioceptivos miden valores internos del sistema (robot), por ejemplo, velocidad del motor, carga de la rueda, ángulos de articulación del brazo del robot y voltaje de la batería.
+    
+        \item Sensores exteroceptivos adquieren información del entorno del robot, por ejemplo, medidas de distancia, intensidad de la luz y amplitud del sonido. Por lo tanto, el robot interpreta las mediciones de los sensores exteroceptivos para extraer características ambientales significativas.
     \end{itemize}
 
     \begin{itemize}
-    \item Los sensores pasivos miden la energía ambiental que ingresa al sensor. Los ejemplos de sensores pasivos incluyen sondas de temperatura, micrófonos y cámaras CCD o CMOS.
-
-    \item Los sensores activos emiten energía al medio ambiente y luego miden la reacción ambiental. Debido a que los sensores activos pueden gestionar interacciones más controladas con el medio ambiente, a menudo logran un rendimiento superior. Sin embargo, la detección activa presenta varios riesgos: la energía de salida puede afectar las mismas características que el sensor está intentando medir. Además, un sensor activo puede sufrir interferencias entre su señal y las que están fuera de su control. Por ejemplo, las señales emitidas por otros robots cercanos, o sensores similares en el mismo robot, pueden influir en las mediciones resultantes. Los ejemplos de sensores activos incluyen codificadores de cuadratura de rueda, sensores ultrasónicos y telémetros láser.
+        \item Los sensores pasivos miden la energía ambiental que ingresa al sensor. Los ejemplos de sensores pasivos incluyen sondas de temperatura, micrófonos y cámaras CCD o CMOS.
+    
+        \item Los sensores activos emiten energía al medio ambiente y luego miden la reacción ambiental. Debido a que los sensores activos pueden gestionar interacciones más controladas con el medio ambiente, a menudo logran un rendimiento superior. Sin embargo, la detección activa presenta varios riesgos: la energía de salida puede afectar las mismas características que el sensor está intentando medir. Además, un sensor activo puede sufrir interferencias entre su señal y las que están fuera de su control. Por ejemplo, las señales emitidas por otros robots cercanos, o sensores similares en el mismo robot, pueden influir en las mediciones resultantes. Los ejemplos de sensores activos incluyen codificadores de cuadratura de rueda, sensores ultrasónicos y telémetros láser.
 \end{itemize}
 
 
