--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -10,8 +10,9 @@
 \materia{Robótica Móvil}
 \titulo{Transformaciones}
 
-\soluciones
-\commentstrue
+% Mostrar soluciones
+%\soluciones
+%\commentstrue
 
 
 \usepackage{biblatex}
@@ -48,6 +49,19 @@ Esta práctica es para ponerse a punto con transformaciones.
     \hspace{3cm}
     \subfloat[$R_{z}(\SI{180}{\degree})R_{x}(\SI{-90}{\degree})R_{y}(\SI{90}{\degree})$]{}
     \end{figure}
+    
+    
+\ejercicio Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ (primero rotación en $x$, luego en $y$ y finalmente en $z$). Se pide:
+
+\begin{enumerate}
+    \item Calcular la matríz de Rotación resultante $R = R_{x}(\alpha) R_{y}(\beta) R_{z}(\gamma)$.
+    \item Utilizando la matríz de rotación calculada $R$, extraer matemáticamente los Ángulos de Euler. Explique.
+\end{enumerate}
+
+\begin{solucion}
+    Fuente: https://www.youtube.com/watch?v=wg9bI8-Qx2Q
+\end{solucion}
+
 
 \ejercicio Dado el siguiente escenario,
 \begin{itemize}
