Slide 1: minor changes

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -486,7 +486,6 @@
                     \item Gabe Sibley
                     \item Luca Carlone
                     \item Andrea Censi
-                    \item Gabe Sibley
                     \item Timothy Barfoot
                 \end{itemize}
             \end{itemize}
@@ -502,7 +501,7 @@
                     \item Wolfram Burgard
                     \item Jose Neira
                     \item Davide Scaramuzza
-                    \item Daniel Dremers
+                    \item Daniel Cremers
                     \item Cyrill Stachnis
                     \item José Luis Blanco Claraco
                 \end{itemize}
