Slide 3: improve format

--- a/teoricas/teorica_03/src/encoders.tex
+++ b/teoricas/teorica_03/src/encoders.tex
@@ -1,13 +1,13 @@
 \begin{frame}
     \frametitle{Optical encoders}
-
-    \includegraphics[width=0.4\columnwidth]{images/encoder_principle}
-    \includegraphics[width=0.4\columnwidth]{images/encoder_parts}
+    \scriptsize
+    \includegraphics[width=0.45\columnwidth]{images/encoder_principle}
+    \includegraphics[width=0.46\columnwidth]{images/encoder_parts}
     \footnotesize
 
-\begin{block}{Principio de funcionamiento}
-    Consta de una fuente de iluminación, una rejilla fija que enmascara la luz, un disco rotor con una fina rejilla óptica que gira con el eje y detectores ópticos fijos. A medida que el rotor se mueve, la cantidad de luz que incide en los detectores ópticos varía según la alineación de las rejillas fijas y móviles. En robótica, la onda sinusoidal resultante se transforma en una onda cuadrada discreta utilizando un umbral para elegir entre estados claros y oscuros. La resolución se mide en ciclos por revolución (CPR). La resolución angular mínima se puede calcular fácilmente a partir de la clasificación de CPR de un codificador. Un codificador típico en robótica móvil puede tener 2000 CPR
-\end{block}
+    \begin{block}{Principio de funcionamiento}
+        Consta de una fuente de iluminación, una rejilla fija que enmascara la luz, un disco rotor con una fina rejilla óptica que gira con el eje y detectores ópticos fijos. A medida que el rotor se mueve, la cantidad de luz que incide en los detectores ópticos varía según la alineación de las rejillas fijas y móviles. En robótica, la onda sinusoidal resultante se transforma en una onda cuadrada discreta utilizando un umbral para elegir entre estados claros y oscuros. La resolución se mide en ciclos por revolución (CPR). La resolución angular mínima se puede calcular fácilmente a partir de la clasificación de CPR de un codificador. Un codificador típico en robótica móvil puede tener 2000 CPR
+    \end{block}
 \end{frame}
 
 \begin{frame}
