--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -431,7 +431,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     Ejemplo de aplicación de Ángulos de Euler $\alpha$, $\beta$ y $\gamma$ utilizando la combinación $zxz$:
    \begin{figure}[!h]
            \centering
-           \subfloat[$R = R_{x}(\alpha) \, R_{x}(\beta) \, R_{z}(\gamma)$]
+           \subfloat[$R = R_{z}(\alpha) \, R_{x}(\beta) \, R_{z}(\gamma)$]
            {
                \includegraphics[width=0.23\columnwidth]{./images/euler_angles_initial.pdf}
            }
