--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -51,7 +51,7 @@ Esta práctica es para ponerse a punto con transformaciones.
     \end{figure}
     
     
-\ejercicio Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ (primero rotación en $x$, luego en $y$ y finalmente en $z$). Se pide:
+\ejercicio Dada los siguientes ángulos de Euler $(\alpha = \frac{4\pi}{7}, \beta = \frac{\pi}{2}, \gamma = -\frac{\pi}{3})$, con órden $xyz$ utilizando Rotación Intrínseca (primero rotación en $x$, luego en $y$ y finalmente en $z$). Se pide:
 
 \begin{enumerate}
     \item Calcular la matríz de Rotación resultante $R = R_{x}(\alpha) R_{y}(\beta) R_{z}(\gamma)$.
