Slide 2: gimbal lock bugfix

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -576,7 +576,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     \note{La palabra ``bloqueo'' puede ser confusa: ninguno de los cardanes (\emph{gimbals}) está bloqueado. Los tres pueden todavía moverse libremente sobre sus ejes de suspensión respectivos. Sin embargo, debido a la orientación paralela de los ejes de dos de los cardanes, existe un eje sobre el que ninguno de los cardanes puede girar.}
     
     \begin{itemize}
-        \item Pérdida de un grado de libertad cuando dos de los tres ejes de giro se colocan en paralelo.
+        \item Pérdida de un grado de libertad cuando dos (azul y magenta) de los tres ejes de giro se colocan en paralelo.
         \item Existe un eje sobre el que no se puede girar. En la práctica, por ejemplo, puede hacer que un brazo robótica no pueda realizar cierto giro. Solución: \emph{wrist flip}.
     \end{itemize}
     
