Slide 2: gimbal lock bugfix

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -591,7 +591,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     
     El Gimbal Lock generó un incidente en el Apolo 11.
     
-    \note{Problema del Apollo 11 con Gimbal Lock: https://history.nasa.gov/alsj/gimbals.html}
+    \note{Problema del Apollo 11 con Gimbal Lock: https://history.nasa.gov/alsj/gimbals.html. A Gimbal for Christmas}
 
     \note{https://youtu.be/Mm8tzzfy1Uw}
     \note{https://youtu.be/oaq4Z4rbKkA}
