--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -25,9 +25,9 @@
 \DeclareMathOperator{\proj}{proj}
 \newcommand{\fromCoord}[2]{{#1}_\mathrm{#2}}
 \newcommand{\toCoord}[2]{\prescript{\mathrm{#2}}{}{#1}}
-\newcommand{\worldCoordSystem}{\mathrm{w}}
+\newcommand{\worldCoordSystem}{\mathrm{W}}
 \newcommand{\bodyCoordSystem}{\mathrm{B}}
-\newcommand{\cameraCoordSystem}{\mathrm{c}}
+\newcommand{\cameraCoordSystem}{\mathrm{C}}
 \newcommand{\point}{\vec{p}}
 \newcommand{\worldPoint}{\toCoord{\point}{\worldCoordSystem}}
 \newcommand{\imagePoint}{\vec{u}}
