Slide 3: improve first slide

--- a/teoricas/teorica_03/src/sensors.tex
+++ b/teoricas/teorica_03/src/sensors.tex
@@ -2,19 +2,25 @@
     \frametitle{Tipos de sensores}
     \footnotesize
     
-    Propioceptivos vs exteroceptivos:
-    
-    \begin{itemize}
-        \item Sensores propioceptivos miden valores internos del sistema (robot), por ejemplo, velocidad del motor, carga de la rueda, ángulos de articulación del brazo del robot y voltaje de la batería.
-    
-        \item Sensores exteroceptivos adquieren información del entorno del robot, por ejemplo, medidas de distancia, intensidad de la luz y amplitud del sonido. Por lo tanto, el robot interpreta las mediciones de los sensores exteroceptivos para extraer características ambientales significativas.
-    \end{itemize}
+    \begin{block}{Propioceptivos}
+        Sensores propioceptivos miden valores internos del sistema (robot), por ejemplo, velocidad del motor, carga de la rueda, ángulos de articulación del brazo del robot y voltaje de la batería.
+    \end{block}
 
-    \begin{itemize}
-        \item Los sensores pasivos miden la energía ambiental que ingresa al sensor. Los ejemplos de sensores pasivos incluyen sondas de temperatura, micrófonos y cámaras CCD o CMOS.
-    
-        \item Los sensores activos emiten energía al medio ambiente y luego miden la reacción ambiental. Debido a que los sensores activos pueden gestionar interacciones más controladas con el medio ambiente, a menudo logran un rendimiento superior. Sin embargo, la detección activa presenta varios riesgos: la energía de salida puede afectar las mismas características que el sensor está intentando medir. Además, un sensor activo puede sufrir interferencias entre su señal y las que están fuera de su control. Por ejemplo, las señales emitidas por otros robots cercanos, o sensores similares en el mismo robot, pueden influir en las mediciones resultantes. Los ejemplos de sensores activos incluyen codificadores de cuadratura de rueda, sensores ultrasónicos y telémetros láser.
-\end{itemize}
+    \begin{block}{Exteroceptivos}
+        Sensores exteroceptivos adquieren información del entorno del robot, por ejemplo, medidas de distancia, intensidad de la luz y amplitud del sonido. Por lo tanto, el robot interpreta las mediciones de los sensores exteroceptivos para extraer características ambientales significativas.
+    \end{block}
+
+    \begin{block}{Pasivos}
+        Los sensores pasivos miden la energía ambiental que ingresa al sensor. Los ejemplos de sensores pasivos incluyen sondas de temperatura, micrófonos y cámaras.
+    \end{block}
+
+    \note{Las tecnologías de las cámaras pueden ser CCD (Charge Coupled Device) o CMOS (Complementary Metal Oxide Semiconductor)}
+
+    \begin{block}{Activos}
+        Los sensores activos emiten energía al medio ambiente y luego miden la reacción ambiental. Debido a que los sensores activos pueden gestionar interacciones más controladas con el medio ambiente, a menudo logran un rendimiento superior. Sin embargo, la detección activa presenta varios riesgos: la energía de salida puede afectar a otros sensores. las mismas características que el sensor está intentando medir.
+        
+        \note{Además, un sensor activo puede sufrir interferencias entre su señal y las que están fuera de su control. Por ejemplo, las señales emitidas por otros robots cercanos, o sensores similares en el mismo robot, pueden influir en las mediciones resultantes. La energía de salida puede afectar a las mismas características que el sensor está intentando medir. Los ejemplos de sensores activos incluyen codificadores de cuadratura de rueda, sensores ultrasónicos y telémetros láser.}
+    \end{block}
 
 
 \end{frame}
@@ -23,13 +29,9 @@
 \begin{frame}
     \frametitle{Sensores}
     \note{tabla 4.1 del libro siegwart}
-    
-        
-    \begin{figure}[!h]
-        \centering
-        \includegraphics[height=0.8\textheight]{images/sensors_table.pdf}
-    \end{figure}
-    
+   
+    \centering
+    \includegraphics[height=0.9\textheight]{images/sensors_table.pdf} 
 
 \end{frame}
 
