Replace gimbal videos

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -569,8 +569,8 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     Cuando representamos una Rotación con ángulos de Euler se puede producir una situación similar al Bloqueo de Cardan (\emph{Gimbal Lock}).    
     
     \begin{center}
-        \movie[autostart,loop,poster]{\includegraphics[width=0.2\textwidth]{./images/gimbal_rotation.png}}{./videos/gimbal_rotation.mp4}\hspace{1em}
-        \movie[autostart,loop,poster]{\includegraphics[width=0.2\textwidth]{./images/gimbal_lock_video.png}}{./videos/gimbal_lock.mp4}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.2\textwidth]{./images/gimbal_rotation_video.jpg}}{./videos/gimbal_rotation.mp4}\hspace{1em}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.2\textwidth]{./images/gimbal_lock_video.jpg}}{./videos/gimbal_lock.mp4}
     \end{center}
     
     \note{La palabra ``bloqueo'' puede ser confusa: ninguno de los cardanes (\emph{gimbals}) está bloqueado. Los tres pueden todavía moverse libremente sobre sus ejes de suspensión respectivos. Sin embargo, debido a la orientación paralela de los ejes de dos de los cardanes, existe un eje sobre el que ninguno de los cardanes puede girar.}
