Euler angles video modified

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -151,7 +151,10 @@
     \end{center}
 \end{frame}
 
-
+\begin{frame}
+    \frametitle{Ejercicio: Traslación en 2D}
+    \TODO{Agregar ejemplo de traslación como hice con la rotación}
+\end{frame}
 
 \begin{frame}
     \frametitle{Rototraslación en 2D}
