--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -20,6 +20,7 @@
 \usepackage{csquotes} % to remove warning triggered by biblatex and babel
 \usepackage{algpseudocode} % to write algorithm
 \usepackage{tikz} % to use tikz
+\usepackage[export]{adjustbox} %valign in subfloat
 
 % Color commands for annotations
 \newcommand\TODO[1]{\textbf{\textcolor{red}{#1}}} %  TODO notes
