--- a/teoricas/teorica_03/src/encoders.tex
+++ b/teoricas/teorica_03/src/encoders.tex
@@ -6,7 +6,8 @@
     \footnotesize
 
     \begin{block}{Principio de funcionamiento}
-        Consta de una fuente de iluminación, una rejilla fija que enmascara la luz, un disco rotor con una fina rejilla óptica que gira con el eje y detectores ópticos fijos. A medida que el rotor se mueve, la cantidad de luz que incide en los detectores ópticos varía según la alineación de las rejillas fijas y móviles. En robótica, la onda sinusoidal resultante se transforma en una onda cuadrada discreta utilizando un umbral para elegir entre estados claros y oscuros. La resolución se mide en ciclos por revolución (CPR). La resolución angular mínima se puede calcular fácilmente a partir de la clasificación de CPR de un codificador. Un codificador típico en robótica móvil puede tener 2000 CPR
+        %Consta de una fuente de iluminación un disco rotor con una fina rejilla óptica que gira con el eje y un detector ópticos fijo.
+        A medida que el rotor se mueve, la cantidad de luz que incide en el detector óptico varía según pase o no la luz. La onda sinusoidal resultante se transforma en una onda cuadrada discreta utilizando un umbral para elegir entre estados claros y oscuros. %La \textbf{resolución} se mide en ciclos por revolución (CPR). La \textbf{resolución angular mínima} se puede calcular fácilmente a partir de la clasificación de CPR de un codificador. Un codificador típico en robótica móvil puede tener 2000 CPR.
     \end{block}
 \end{frame}
 
