--- a/teoricas/teorica_03/src/sensors.tex
+++ b/teoricas/teorica_03/src/sensors.tex
@@ -2,7 +2,7 @@
     \frametitle{Tipos de sensores}
     \footnotesize
     
-    \begin{block}{Propioceptivos}
+    \begin{block}{Propioceptivos (o introceptivos)}
         Sensores propioceptivos miden valores internos del sistema (robot), por ejemplo, velocidad del motor, carga de la rueda, ángulos de articulación del brazo del robot y voltaje de la batería.
     \end{block}
 
